--- a/front/components/Header/Header.module.scss
+++ b/front/components/Header/Header.module.scss
@@ -1,16 +1,17 @@
 .header {
   width: 100%;
-  padding: 15px 20px;
-  background-color: lightgray;
+  padding: 15px 40px;
+  background: linear-gradient(180deg, rgba(54,139,255,1) 30%, rgba(0,0,0,1) 100%);
   display: flex;
   flex-direction: row;
+  position: relative;
   .imageWrapper {
-    max-width: 300px;
     margin-right: 20px;
     box-shadow: 0 5px 7px rgba(0, 0, 0, 0.2);
     img {
-      max-width: 300px;
+      width: 300px;
       height: 300px;
+      object-fit: fill;
     }
   }
   .contentWrapper {
